# nextbot_simulator

./: Readme.md
nextbot_robot/: CMakeLists.txt  my_map2.yaml  nextbot.rviz  package.xml
nextbot_robot/robot_description/config/: nextbot.yaml  nextbot_wide.yaml
nextbot_robot/robot_description/launch/: .nextbot_simulator.launch.swp  move_base.launch  nextbot_simulator.launch  rgbd_mapping.launch
nextbot_robot/robot_description/urdf/: .asus_camera.urdf.xacro.swp  .nextbot.xacro.swo  .nextbot.xacro.swp  nextbot.xacro  nextbot.xacro.ori
nextbot_robot/src/: rotating_laser.cpp  scan_from_sonar.cpp
nextbot_robot/worlds/: test_zone.sdf
nextbot_teleop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
nextbot_teleop/launch/: xbox360_teleop.launch  xbox360_teleop_andbot.launch
nextbot_teleop/launch/includes/: velocity_smoother.launch.xml
nextbot_teleop/scripts/: nextbot_teleop  nextbot_teleop_key
nextbot_teleop/src/: nextbot_joy.cpp  nextbot_teleop_key.cpp
